--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <button type="submit">Quero Doar</button>
     </header>
 
-    <section class="form">
+    <section class="form hide">
       <h2>Entre para lista de doadores</h2>
       <form action="/">
         <input type="text" name="name" placeholder="Digite seu nome completo" />
@@ -50,5 +50,6 @@
       </section>
     </main>
     <footer>Com 😍 Eduardo Developer</footer>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
