--- a/SNWJFColeta/index.html
+++ b/SNWJFColeta/index.html
@@ -5,23 +5,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JF Coleta Ambiental</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="">
   <link rel="stylesheet" href="/css/main.css">
-
+  <link rel="stylesheet" href="/css/home.css">
+  <link rel="stylesheet" href="/css/responsive.css">
 
 </head>
 
 <body>
+  <div id="page-home">
+    <div class="content">
+      <header>
+        <img src="/assets/icones/logo.svg" alt="JF Coleta">
+        <a href="#">
+          <span></span>
+          Cadastre um ponto de coleta.</a>
+      </header>
+      <main>
+        <h1>Seu marketplace de coleta de resíduos</h1>
+        <p>AJudamos pessoas a encontrar pontos de coleta de forma eficiente</p>
+        <a href="#"><span></span><strong>Pesquisar pontos de coleta</strong></a>
+      </main>
 
-  <div class="content">
-    <header>
-      <h3 class="">JF Coleta Ambiental</h3>
-      <a href="#">Cadastre um ponto de coleta.</a>
-    </header>
-    <h1>Seu marketplace de coleta de resíduos</h1>
-    <p>AJudamos pessoas a encontrar pontos de coleta de forma eficiente</p>
-    <button>Pesquisar pontos de coleta</button>
+    </div>
   </div>
+
+
 </body>
 
 </html>
