Create form an modal

--- a/-MaratonaDevRocketseat/SNWJFColeta/index.html
+++ b/-MaratonaDevRocketseat/SNWJFColeta/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="">
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/home.css">
+  <link rel="stylesheet" href="/css/modal.css">
   <link rel="stylesheet" href="/css/responsive.css">
 
 </head>
@@ -27,6 +28,24 @@
         <a href="#"><span></span><strong>Pesquisar pontos de coleta</strong></a>
       </main>
 
+    </div>
+  </div>
+
+  <div id="modal" class="hide">
+    <div class="content">
+      <div class="header">
+        <h1>Pontos de Coletas</h1>
+        <a href="">Fechar</a>
+      </div>
+      <form action="">
+        <label for="search">Cidade ou Estado</label>
+        <div class="search field">
+          <input type="text" name="search" placeholder="Pesquise por Cidade ou Estado">
+          <button>
+            <img src="/assets/icones/search.svg" alt="Buscar">
+          </button>
+        </div>
+      </form>
     </div>
   </div>
 
