--- a/-MaratonaDevRocketseat/SNWJFColeta/create-point.html
+++ b/-MaratonaDevRocketseat/SNWJFColeta/create-point.html
@@ -29,18 +29,18 @@
         </legend>
         <div class="field">
           <label for="name">Nome da entidade</label>
-          <input type="text" name="name">
+          <input type="text" name="name" required>
         </div>
 
         <div class="field-group">
           <div class="field">
             <label for="address">Endereço</label>
-            <input type="text" name="address">
+            <input type="text" name="address" required>
           </div>
 
           <div class="field">
             <label for="number">Numero / Complemento</label>
-            <input type="text" name="address">
+            <input type="text" name="address" required>
           </div>
         </div>
 
@@ -50,7 +50,7 @@
             <select name="uf">
               <option value="">Selecione o estado</option>
             </select>
-            <input type="hidden" name="state">
+            <input type="hidden" name="state" required>
           </div>
 
           <div class="field">
@@ -64,10 +64,40 @@
         </div>
       </fieldset>
 
-      <legend>
-        <h2>Ítems de coleta</h2>
-      </legend>
+
+
       <fieldset>
+        <legend>
+          <h2>Ítems de coleta</h2>
+        </legend>
+
+        <div class="items-grid">
+          <li data-id="1">
+            <img src="./assets/icones/lampadas.svg" alt="Lâmpadas">
+            <span>Lâmpadas</span>
+          </li>
+          <li data-id="2">
+            <img src="./assets/icones/baterias.svg" alt="Pilhas e Baterias">
+            <span>Pilhas e Baterias</span>
+          </li>
+          <li data-id="3">
+            <img src="./assets/icones/papeis-papelao.svg" alt="Papéis e papelão">
+            <span>Papéis e papelão</span>
+          </li>
+          <li data-id="4">
+            <img src="./assets/icones/eletronicos.svg" alt="Resíduos Eletrônicos">
+            <span>Resíduos Eletrônicos</span>
+          </li>
+          <li data-id="5">
+            <img src="./assets/icones/organicos.svg" alt="Resíduos Organicos">
+            <span>Resíduos Organicos</span>
+          </li>
+          <li data-id="6">
+            <img src="./assets/icones/oleo.svg" alt="Óleo de Cozinha">
+            <span>Óleo de Cozinha</span>
+          </li>
+        </div>
+        <input type="hidden" name="items">
 
       </fieldset>
       <button type="submit">Cadastrar ponto de coleta</button>
