Create form and modal finish

--- a/-MaratonaDevRocketseat/SNWJFColeta/index.html
+++ b/-MaratonaDevRocketseat/SNWJFColeta/index.html
@@ -18,7 +18,7 @@
     <div class="content">
       <header>
         <img src="/assets/icones/logo.svg" alt="JF Coleta">
-        <a href="#">
+        <a href="/create-point.html">
           <span></span>
           Cadastre um ponto de coleta.</a>
       </header>
@@ -35,9 +35,9 @@
     <div class="content">
       <div class="header">
         <h1>Pontos de Coletas</h1>
-        <a href="">Fechar</a>
+        <a href="#">Fechar</a>
       </div>
-      <form action="">
+      <form action="/search-results.html">
         <label for="search">Cidade ou Estado</label>
         <div class="search field">
           <input type="text" name="search" placeholder="Pesquise por Cidade ou Estado">
@@ -49,6 +49,7 @@
     </div>
   </div>
 
+  <script src="./scripts/index.js"></script>
 
 </body>
 
