--- a/-MaratonaDevRocketseat/SNWJFColeta/create-point.html
+++ b/-MaratonaDevRocketseat/SNWJFColeta/create-point.html
@@ -17,7 +17,7 @@
 
     <header>
       <img src="/assets/icones/logo.svg" alt="JF Coleta">
-      <a href="#">
+      <a href="/">
         <span></span>
         Voltar para Home.</a>
     </header>
